--- a/ex.html
+++ b/ex.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    
-    <script src="ex2.js"></script>
+    <script src="ex1.js"></script>
+    <!-- <script src="ex2.js"></script> -->
 </body>
 </html>
